<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginTop="20sp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/data_balance"
            android:textSize="15sp"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:background="@drawable/solid_rectangle"
            android:padding="5dp"
            android:text="@string/buy_data_plan"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/textInput"
    android:background="@drawable/rectangle_background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:padding="5dp"
        android:text="@string/_26"
        android:textSize="15sp" />
    <TextView
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:layout_weight=".3"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="15sp"/>
</LinearLayout>
</LinearLayout>